training/origin-247/json-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: json-server
  name: json-server
  namespace: default
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: json-server
