training/origin-247/json-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-server-ingress
  namespace: default
spec:
  rules:
    - host: json-server.devops-playground.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: json-server
                port:
                  name: http
